--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Estilos -->
-    <link rel="stylesheet" href="/ASSET/style.scss">
+    <link rel="stylesheet" href="./ASSET/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="particulas">
-        <div class="beans--uno" ><img src="./ASSET/IMAGES/coffee beans.png" alt="" style="width: 50px; height: 50px;"></div>
-        <div class="beans"><img src="./ASSET/IMAGES/coffee beans.png" alt="" style="width: 50px; height: 50px;"></div>
-        <div class="beans"><img src="./ASSET/IMAGES/coffee beans.png" alt="" style="width: 50px; height: 50px;"></div>
-        <div class="beans"><img src="./ASSET/IMAGES/coffee beans.png" alt="" style="width: 50px; height: 50px;"></div>
-        <div class="beans"><img src="./ASSET/IMAGES/coffee beans.png" alt="" style="width: 50px; height: 50px;"></div>
-        <div class="beans"><img src="./ASSET/IMAGES/coffee beans.png" alt="" style="width: 50px; height: 50px;"></div>
-    </section>
+    <header>
+        <nav class="nav">
+            <img src="./ASSET/IMAGES/logo.png" alt="" style="width: 100px; height: 50px;">
+            <ul>
+                <li><a href="#">Inico</a></li>
+                <li><a href="#">Catalogo</a></li>
+                <li><a href="#">Comunidad</a></li>
+            </ul>
+            <div class="r-container">
+                <a href="#" class="registro">Log in</a>
+                <a href="#" class="registro">Sign in</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
