primera version de la bienvenida

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,10 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="./ASSET/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav class="nav">
@@ -24,6 +26,21 @@
                 <a href="#" class="registro">Sign in</a>
             </div>
         </nav>
+        <article class="baner-container">
+            <div class="baner">
+                <img src="./ASSET/IMAGES/logo.png" alt="">
+                <h3>Tu café a un click de distancia.</h3>
+            </div>
+            <br>
+            <p>Conoce mas sobre nosotos dando click en el boton de abajo</p>
+            <button class="click">Click!</button>
+            <dialog>
+                <button>cerrar</button>
+            </dialog>
+        </article>
     </header>
+    <script src="./ASSET/index.js">
+    </script>
 </body>
+
 </html>
