intento de hacer una barra fija N°1

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 <body>
     <header>
         <nav class="nav">
-            <img src="./ASSET/IMAGES/logo.png" alt="" style="width: 100px; height: 50px;">
-            <ul>
-                <li><a href="#">Inico</a></li>
-                <li><a href="#">Catalogo</a></li>
-                <li><a href="#">Comunidad</a></li>
-            </ul>
+            <div><img src="./ASSET/IMAGES/Logo.webp" alt="" style="width: 110px; height: 50px;"></div>
+            <div>
+                <ul>
+                    <li><a href="#">Inico</a></li>
+                    <li><a href="#">Catalogo</a></li>
+                    <li><a href="#">Comunidad</a></li>
+                </ul>
+            </div>
+
             <div class="r-container">
                 <a href="#" class="registro">Log in</a>
                 <a href="#" class="registro">Sign in</a>
@@ -28,7 +31,7 @@
         </nav>
         <article class="baner-container">
             <div class="baner">
-                <img src="./ASSET/IMAGES/logo.png" alt="">
+                <img src="./ASSET/IMAGES/Logo.webp" alt="" style="width: 350px;height: 150px;">
                 <h3>Tu café a un click de distancia.</h3>
             </div>
             <br>
@@ -39,6 +42,12 @@
             </dialog>
         </article>
     </header>
+    <main>
+        <section class="catalogo">
+            <br>
+            <br><br><br>
+        </section>
+    </main>
     <script src="./ASSET/index.js">
     </script>
 </body>
